feat: member auth oracle
